parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    Class
    colon_colon
    Protected
    Private
    question_mark
    new_line
    arrow
    dot
    Void
    colon
    Public
    right_shift

Grammar

Rule 0     S' -> PROGRAM
Rule 1     PROGRAM -> GLOBAL_STATEMENT_LIST MAIN
Rule 2     PROGRAM -> MAIN
Rule 3     EPSILON -> <empty>
Rule 4     GLOBAL_STATEMENT -> EXPRESSION_STATEMENT
Rule 5     GLOBAL_STATEMENT -> DECLARATION_STATEMENT
Rule 6     MAIN -> Int Main l_paren r_paren l_brace STATEMENT_LIST Return integer_constant semicolon r_brace
Rule 7     STATEMENT -> EXPRESSION_STATEMENT
Rule 8     STATEMENT -> SELECTION_STATEMENT
Rule 9     STATEMENT -> JUMP_STATEMENT
Rule 10    STATEMENT -> ITERATION_STATEMENT
Rule 11    STATEMENT -> LOCAL_DECLARATION_STATEMENT
Rule 12    STATEMENT -> PRINT_STATEMENT
Rule 13    PRINT_STATEMENT -> Cout CASCADE semicolon
Rule 14    CASCADE -> left_shift EXPRESSION
Rule 15    CASCADE -> left_shift string_literal
Rule 16    CASCADE -> left_shift EXPRESSION CASCADE
Rule 17    CASCADE -> left_shift string_literal CASCADE
Rule 18    LOCAL_DECLARATION_STATEMENT -> LOCAL_DECLARATION
Rule 19    EXPRESSION_STATEMENT -> EXPRESSION semicolon
Rule 20    EXPRESSION_STATEMENT -> semicolon
Rule 21    COMPOUND_STATEMENT -> l_brace STATEMENT_LIST r_brace
Rule 22    COMPOUND_STATEMENT -> l_brace r_brace
Rule 23    GLOBAL_STATEMENT_LIST -> GLOBAL_STATEMENT
Rule 24    GLOBAL_STATEMENT_LIST -> GLOBAL_STATEMENT_LIST GLOBAL_STATEMENT
Rule 25    STATEMENT_LIST -> STATEMENT
Rule 26    STATEMENT_LIST -> STATEMENT_LIST STATEMENT
Rule 27    ITERATION_STATEMENT -> While l_paren EXPRESSION r_paren COMPOUND_STATEMENT
Rule 28    SELECTION_STATEMENT -> If l_paren EXPRESSION r_paren COMPOUND_STATEMENT
Rule 29    SELECTION_STATEMENT -> If l_paren EXPRESSION r_paren COMPOUND_STATEMENT TEMP Else COMPOUND_STATEMENT
Rule 30    TEMP -> EPSILON
Rule 31    JUMP_STATEMENT -> Break semicolon
Rule 32    JUMP_STATEMENT -> Continue semicolon
Rule 33    JUMP_STATEMENT -> Return EXPRESSION semicolon
Rule 34    JUMP_STATEMENT -> Return semicolon
Rule 35    DECLARATION_STATEMENT -> DECLARATION
Rule 36    EXPRESSION -> ASSIGNMENT_EXPRESSION
Rule 37    EXPRESSION -> EXPRESSION comma ASSIGNMENT_EXPRESSION
Rule 38    ASSIGNMENT_EXPRESSION -> CONDITIONAL_EXPRESSION
Rule 39    ASSIGNMENT_EXPRESSION -> UNARY_EXPRESSION ASSIGNMENT_OPERATOR ASSIGNMENT_EXPRESSION
Rule 40    ASSIGNMENT_OPERATOR -> equal
Rule 41    ASSIGNMENT_OPERATOR -> star_equal
Rule 42    ASSIGNMENT_OPERATOR -> slash_equal
Rule 43    ASSIGNMENT_OPERATOR -> mod_equal
Rule 44    ASSIGNMENT_OPERATOR -> plus_equal
Rule 45    ASSIGNMENT_OPERATOR -> minus_equal
Rule 46    ASSIGNMENT_OPERATOR -> left_shift_equal
Rule 47    ASSIGNMENT_OPERATOR -> right_shift_equal
Rule 48    ASSIGNMENT_OPERATOR -> ampersand_equal
Rule 49    ASSIGNMENT_OPERATOR -> cap_equal
Rule 50    ASSIGNMENT_OPERATOR -> pipe_equal
Rule 51    CONDITIONAL_EXPRESSION -> LOGICAL_OR_EXPRESSION
Rule 52    LOGICAL_OR_EXPRESSION -> LOGICAL_AND_EXPRESSION
Rule 53    LOGICAL_OR_EXPRESSION -> LOGICAL_OR_EXPRESSION pipe_pipe LOGICAL_AND_EXPRESSION
Rule 54    LOGICAL_AND_EXPRESSION -> INCLUSIVE_OR_EXPRESSION
Rule 55    LOGICAL_AND_EXPRESSION -> LOGICAL_AND_EXPRESSION ampersand_ampersand INCLUSIVE_OR_EXPRESSION
Rule 56    INCLUSIVE_OR_EXPRESSION -> EXCLUSIVE_OR_EXPRESSION
Rule 57    INCLUSIVE_OR_EXPRESSION -> INCLUSIVE_OR_EXPRESSION pipe EXCLUSIVE_OR_EXPRESSION
Rule 58    EXCLUSIVE_OR_EXPRESSION -> AND_EXPRESSION
Rule 59    EXCLUSIVE_OR_EXPRESSION -> EXCLUSIVE_OR_EXPRESSION cap AND_EXPRESSION
Rule 60    AND_EXPRESSION -> EQUALITY_EXPRESSION
Rule 61    AND_EXPRESSION -> AND_EXPRESSION ampersand EQUALITY_EXPRESSION
Rule 62    EQUALITY_EXPRESSION -> RELATIONAL_EXPRESSION
Rule 63    EQUALITY_EXPRESSION -> EQUALITY_EXPRESSION equal_equal RELATIONAL_EXPRESSION
Rule 64    EQUALITY_EXPRESSION -> EQUALITY_EXPRESSION notequal RELATIONAL_EXPRESSION
Rule 65    RELATIONAL_EXPRESSION -> SHIFT_EXPRESSION
Rule 66    RELATIONAL_EXPRESSION -> RELATIONAL_EXPRESSION lt SHIFT_EXPRESSION
Rule 67    RELATIONAL_EXPRESSION -> RELATIONAL_EXPRESSION gt SHIFT_EXPRESSION
Rule 68    RELATIONAL_EXPRESSION -> RELATIONAL_EXPRESSION lte SHIFT_EXPRESSION
Rule 69    RELATIONAL_EXPRESSION -> RELATIONAL_EXPRESSION gte SHIFT_EXPRESSION
Rule 70    SHIFT_EXPRESSION -> ADDITIVE_EXPRESSION
Rule 71    ADDITIVE_EXPRESSION -> MULTIPLICATIVE_EXPRESSION
Rule 72    ADDITIVE_EXPRESSION -> ADDITIVE_EXPRESSION plus MULTIPLICATIVE_EXPRESSION
Rule 73    ADDITIVE_EXPRESSION -> ADDITIVE_EXPRESSION minus MULTIPLICATIVE_EXPRESSION
Rule 74    MULTIPLICATIVE_EXPRESSION -> UNARY_EXPRESSION
Rule 75    MULTIPLICATIVE_EXPRESSION -> MULTIPLICATIVE_EXPRESSION star UNARY_EXPRESSION
Rule 76    MULTIPLICATIVE_EXPRESSION -> MULTIPLICATIVE_EXPRESSION slash UNARY_EXPRESSION
Rule 77    MULTIPLICATIVE_EXPRESSION -> MULTIPLICATIVE_EXPRESSION mod UNARY_EXPRESSION
Rule 78    UNARY_EXPRESSION -> PRIMARY_EXPRESSION
Rule 79    UNARY_EXPRESSION -> UNARY_OPERATOR UNARY_EXPRESSION
Rule 80    UNARY_EXPRESSION -> plus_plus UNARY_EXPRESSION
Rule 81    UNARY_EXPRESSION -> minus_minus UNARY_EXPRESSION
Rule 82    UNARY_OPERATOR -> star
Rule 83    UNARY_OPERATOR -> ampersand
Rule 84    UNARY_OPERATOR -> plus
Rule 85    UNARY_OPERATOR -> minus
Rule 86    UNARY_OPERATOR -> exclamation
Rule 87    UNARY_OPERATOR -> tilde
Rule 88    EXPRESSION_LIST -> ASSIGNMENT_EXPRESSION
Rule 89    EXPRESSION_LIST -> EXPRESSION_LIST comma ASSIGNMENT_EXPRESSION
Rule 90    PRIMARY_EXPRESSION -> LITERAL
Rule 91    PRIMARY_EXPRESSION -> l_paren EXPRESSION r_paren
Rule 92    PRIMARY_EXPRESSION -> NAME
Rule 93    PRIMARY_EXPRESSION -> NAME l_bracket integer_constant r_bracket
Rule 94    NAME -> identifier
Rule 95    LITERAL -> integer_constant
Rule 96    LITERAL -> character_constant
Rule 97    LITERAL -> floating_constant
Rule 98    LITERAL -> string_literal
Rule 99    DECLARATION -> DECL_SPECIFIERS DECLARATOR_LIST semicolon
Rule 100   LOCAL_DECLARATION -> LOCAL_DECL_SPECIFIERS LOCAL_DECLARATOR_LIST semicolon
Rule 101   LOCAL_DECL_SPECIFIERS -> LOCAL_DECL_SPECIFIERS SIMPLE_TYPE_NAME
Rule 102   LOCAL_DECL_SPECIFIERS -> SIMPLE_TYPE_NAME
Rule 103   DECL_SPECIFIERS -> DECL_SPECIFIERS TYPE_SPECIFIER
Rule 104   DECL_SPECIFIERS -> TYPE_SPECIFIER
Rule 105   TYPE_SPECIFIER -> SIMPLE_TYPE_NAME
Rule 106   SIMPLE_TYPE_NAME -> NAME
Rule 107   SIMPLE_TYPE_NAME -> Char
Rule 108   SIMPLE_TYPE_NAME -> Short
Rule 109   SIMPLE_TYPE_NAME -> Int
Rule 110   SIMPLE_TYPE_NAME -> Long
Rule 111   SIMPLE_TYPE_NAME -> Signed
Rule 112   SIMPLE_TYPE_NAME -> Unsigned
Rule 113   SIMPLE_TYPE_NAME -> Float
Rule 114   SIMPLE_TYPE_NAME -> Double
Rule 115   CONSTANT_EXPRESSION -> CONDITIONAL_EXPRESSION
Rule 116   DECLARATOR_LIST -> INIT_DECLARATOR
Rule 117   LOCAL_DECLARATOR_LIST -> LOCAL_INIT_DECLARATOR
Rule 118   INIT_DECLARATOR -> DECLARATOR INITIALIZER
Rule 119   INIT_DECLARATOR -> DECLARATOR
Rule 120   LOCAL_INIT_DECLARATOR -> LOCAL_DECLARATOR INITIALIZER
Rule 121   LOCAL_INIT_DECLARATOR -> LOCAL_DECLARATOR
Rule 122   DECLARATOR -> DNAME
Rule 123   DECLARATOR -> DECLARATOR l_bracket CONSTANT_EXPRESSION r_bracket
Rule 124   DECLARATOR -> DECLARATOR l_bracket r_bracket
Rule 125   DECLARATOR -> l_paren DECLARATOR r_paren
Rule 126   LOCAL_DECLARATOR -> NAME
Rule 127   LOCAL_DECLARATOR -> LOCAL_DECLARATOR l_bracket CONSTANT_EXPRESSION r_bracket
Rule 128   LOCAL_DECLARATOR -> LOCAL_DECLARATOR l_bracket r_bracket
Rule 129   LOCAL_DECLARATOR -> l_paren LOCAL_DECLARATOR r_paren
Rule 130   DNAME -> NAME
Rule 131   DNAME -> tilde NAME
Rule 132   INITIALIZER -> equal ASSIGNMENT_EXPRESSION
Rule 133   INITIALIZER -> l_paren EXPRESSION_LIST r_paren

Terminals, with rules where they appear

Break                : 31
Char                 : 107
Class                : 
Continue             : 32
Cout                 : 13
Double               : 114
Else                 : 29
Float                : 113
If                   : 28 29
Int                  : 6 109
Long                 : 110
Main                 : 6
Private              : 
Protected            : 
Public               : 
Return               : 6 33 34
Short                : 108
Signed               : 111
Unsigned             : 112
Void                 : 
While                : 27
ampersand            : 61 83
ampersand_ampersand  : 55
ampersand_equal      : 48
arrow                : 
cap                  : 59
cap_equal            : 49
character_constant   : 96
colon                : 
colon_colon          : 
comma                : 37 89
dot                  : 
equal                : 40 132
equal_equal          : 63
error                : 
exclamation          : 86
floating_constant    : 97
gt                   : 67
gte                  : 69
identifier           : 94
integer_constant     : 6 93 95
l_brace              : 6 21 22
l_bracket            : 93 123 124 127 128
l_paren              : 6 27 28 29 91 125 129 133
left_shift           : 14 15 16 17
left_shift_equal     : 46
lt                   : 66
lte                  : 68
minus                : 73 85
minus_equal          : 45
minus_minus          : 81
mod                  : 77
mod_equal            : 43
new_line             : 
notequal             : 64
pipe                 : 57
pipe_equal           : 50
pipe_pipe            : 53
plus                 : 72 84
plus_equal           : 44
plus_plus            : 80
question_mark        : 
r_brace              : 6 21 22
r_bracket            : 93 123 124 127 128
r_paren              : 6 27 28 29 91 125 129 133
right_shift          : 
right_shift_equal    : 47
semicolon            : 6 13 19 20 31 32 33 34 99 100
slash                : 76
slash_equal          : 42
star                 : 75 82
star_equal           : 41
string_literal       : 15 17 98
tilde                : 87 131

Nonterminals, with rules where they appear

ADDITIVE_EXPRESSION  : 70 72 73
AND_EXPRESSION       : 58 59 61
ASSIGNMENT_EXPRESSION : 36 37 39 88 89 132
ASSIGNMENT_OPERATOR  : 39
CASCADE              : 13 16 17
COMPOUND_STATEMENT   : 27 28 29 29
CONDITIONAL_EXPRESSION : 38 115
CONSTANT_EXPRESSION  : 123 127
DECLARATION          : 35
DECLARATION_STATEMENT : 5
DECLARATOR           : 118 119 123 124 125
DECLARATOR_LIST      : 99
DECL_SPECIFIERS      : 99 103
DNAME                : 122
EPSILON              : 30
EQUALITY_EXPRESSION  : 60 61 63 64
EXCLUSIVE_OR_EXPRESSION : 56 57 59
EXPRESSION           : 14 16 19 27 28 29 33 37 91
EXPRESSION_LIST      : 89 133
EXPRESSION_STATEMENT : 4 7
GLOBAL_STATEMENT     : 23 24
GLOBAL_STATEMENT_LIST : 1 24
INCLUSIVE_OR_EXPRESSION : 54 55 57
INITIALIZER          : 118 120
INIT_DECLARATOR      : 116
ITERATION_STATEMENT  : 10
JUMP_STATEMENT       : 9
LITERAL              : 90
LOCAL_DECLARATION    : 18
LOCAL_DECLARATION_STATEMENT : 11
LOCAL_DECLARATOR     : 120 121 127 128 129
LOCAL_DECLARATOR_LIST : 100
LOCAL_DECL_SPECIFIERS : 100 101
LOCAL_INIT_DECLARATOR : 117
LOGICAL_AND_EXPRESSION : 52 53 55
LOGICAL_OR_EXPRESSION : 51 53
MAIN                 : 1 2
MULTIPLICATIVE_EXPRESSION : 71 72 73 75 76 77
NAME                 : 92 93 106 126 130 131
PRIMARY_EXPRESSION   : 78
PRINT_STATEMENT      : 12
PROGRAM              : 0
RELATIONAL_EXPRESSION : 62 63 64 66 67 68 69
SELECTION_STATEMENT  : 8
SHIFT_EXPRESSION     : 65 66 67 68 69
SIMPLE_TYPE_NAME     : 101 102 105
STATEMENT            : 25 26
STATEMENT_LIST       : 6 21 26
TEMP                 : 29
TYPE_SPECIFIER       : 103 104
UNARY_EXPRESSION     : 39 74 75 76 77 79 80 81
UNARY_OPERATOR       : 79

Parsing method: LALR

state 0

    (0) S' -> . PROGRAM
    (1) PROGRAM -> . GLOBAL_STATEMENT_LIST MAIN
    (2) PROGRAM -> . MAIN
    (23) GLOBAL_STATEMENT_LIST -> . GLOBAL_STATEMENT
    (24) GLOBAL_STATEMENT_LIST -> . GLOBAL_STATEMENT_LIST GLOBAL_STATEMENT
    (6) MAIN -> . Int Main l_paren r_paren l_brace STATEMENT_LIST Return integer_constant semicolon r_brace
    (4) GLOBAL_STATEMENT -> . EXPRESSION_STATEMENT
    (5) GLOBAL_STATEMENT -> . DECLARATION_STATEMENT
    (19) EXPRESSION_STATEMENT -> . EXPRESSION semicolon
    (20) EXPRESSION_STATEMENT -> . semicolon
    (35) DECLARATION_STATEMENT -> . DECLARATION
    (36) EXPRESSION -> . ASSIGNMENT_EXPRESSION
    (37) EXPRESSION -> . EXPRESSION comma ASSIGNMENT_EXPRESSION
    (99) DECLARATION -> . DECL_SPECIFIERS DECLARATOR_LIST semicolon
    (38) ASSIGNMENT_EXPRESSION -> . CONDITIONAL_EXPRESSION
    (39) ASSIGNMENT_EXPRESSION -> . UNARY_EXPRESSION ASSIGNMENT_OPERATOR ASSIGNMENT_EXPRESSION
    (103) DECL_SPECIFIERS -> . DECL_SPECIFIERS TYPE_SPECIFIER
    (104) DECL_SPECIFIERS -> . TYPE_SPECIFIER
    (51) CONDITIONAL_EXPRESSION -> . LOGICAL_OR_EXPRESSION
    (78) UNARY_EXPRESSION -> . PRIMARY_EXPRESSION
    (79) UNARY_EXPRESSION -> . UNARY_OPERATOR UNARY_EXPRESSION
    (80) UNARY_EXPRESSION -> . plus_plus UNARY_EXPRESSION
    (81) UNARY_EXPRESSION -> . minus_minus UNARY_EXPRESSION
    (105) TYPE_SPECIFIER -> . SIMPLE_TYPE_NAME
    (52) LOGICAL_OR_EXPRESSION -> . LOGICAL_AND_EXPRESSION
    (53) LOGICAL_OR_EXPRESSION -> . LOGICAL_OR_EXPRESSION pipe_pipe LOGICAL_AND_EXPRESSION
    (90) PRIMARY_EXPRESSION -> . LITERAL
    (91) PRIMARY_EXPRESSION -> . l_paren EXPRESSION r_paren
    (92) PRIMARY_EXPRESSION -> . NAME
    (93) PRIMARY_EXPRESSION -> . NAME l_bracket integer_constant r_bracket
    (82) UNARY_OPERATOR -> . star
    (83) UNARY_OPERATOR -> . ampersand
    (84) UNARY_OPERATOR -> . plus
    (85) UNARY_OPERATOR -> . minus
    (86) UNARY_OPERATOR -> . exclamation
    (87) UNARY_OPERATOR -> . tilde
    (106) SIMPLE_TYPE_NAME -> . NAME
    (107) SIMPLE_TYPE_NAME -> . Char
    (108) SIMPLE_TYPE_NAME -> . Short
    (109) SIMPLE_TYPE_NAME -> . Int
    (110) SIMPLE_TYPE_NAME -> . Long
    (111) SIMPLE_TYPE_NAME -> . Signed
    (112) SIMPLE_TYPE_NAME -> . Unsigned
    (113) SIMPLE_TYPE_NAME -> . Float
    (114) SIMPLE_TYPE_NAME -> . Double
    (54) LOGICAL_AND_EXPRESSION -> . INCLUSIVE_OR_EXPRESSION
    (55) LOGICAL_AND_EXPRESSION -> . LOGICAL_AND_EXPRESSION ampersand_ampersand INCLUSIVE_OR_EXPRESSION
    (95) LITERAL -> . integer_constant
    (96) LITERAL -> . character_constant
    (97) LITERAL -> . floating_constant
    (98) LITERAL -> . string_literal
    (94) NAME -> . identifier
    (56) INCLUSIVE_OR_EXPRESSION -> . EXCLUSIVE_OR_EXPRESSION
    (57) INCLUSIVE_OR_EXPRESSION -> . INCLUSIVE_OR_EXPRESSION pipe EXCLUSIVE_OR_EXPRESSION
    (58) EXCLUSIVE_OR_EXPRESSION -> . AND_EXPRESSION
    (59) EXCLUSIVE_OR_EXPRESSION -> . EXCLUSIVE_OR_EXPRESSION cap AND_EXPRESSION
    (60) AND_EXPRESSION -> . EQUALITY_EXPRESSION
    (61) AND_EXPRESSION -> . AND_EXPRESSION ampersand EQUALITY_EXPRESSION
    (62) EQUALITY_EXPRESSION -> . RELATIONAL_EXPRESSION
    (63) EQUALITY_EXPRESSION -> . EQUALITY_EXPRESSION equal_equal RELATIONAL_EXPRESSION
    (64) EQUALITY_EXPRESSION -> . EQUALITY_EXPRESSION notequal RELATIONAL_EXPRESSION
    (65) RELATIONAL_EXPRESSION -> . SHIFT_EXPRESSION
    (66) RELATIONAL_EXPRESSION -> . RELATIONAL_EXPRESSION lt SHIFT_EXPRESSION
    (67) RELATIONAL_EXPRESSION -> . RELATIONAL_EXPRESSION gt SHIFT_EXPRESSION
    (68) RELATIONAL_EXPRESSION -> . RELATIONAL_EXPRESSION lte SHIFT_EXPRESSION
    (69) RELATIONAL_EXPRESSION -> . RELATIONAL_EXPRESSION gte SHIFT_EXPRESSION
    (70) SHIFT_EXPRESSION -> . ADDITIVE_EXPRESSION
    (71) ADDITIVE_EXPRESSION -> . MULTIPLICATIVE_EXPRESSION
    (72) ADDITIVE_EXPRESSION -> . ADDITIVE_EXPRESSION plus MULTIPLICATIVE_EXPRESSION
    (73) ADDITIVE_EXPRESSION -> . ADDITIVE_EXPRESSION minus MULTIPLICATIVE_EXPRESSION
    (74) MULTIPLICATIVE_EXPRESSION -> . UNARY_EXPRESSION
    (75) MULTIPLICATIVE_EXPRESSION -> . MULTIPLICATIVE_EXPRESSION star UNARY_EXPRESSION
    (76) MULTIPLICATIVE_EXPRESSION -> . MULTIPLICATIVE_EXPRESSION slash UNARY_EXPRESSION
    (77) MULTIPLICATIVE_EXPRESSION -> . MULTIPLICATIVE_EXPRESSION mod UNARY_EXPRESSION

    Int             shift and go to state 11
    semicolon       shift and go to state 13
    plus_plus       shift and go to state 39
    minus_minus     shift and go to state 50
    l_paren         shift and go to state 6
    star            shift and go to state 3
    ampersand       shift and go to state 51
    plus            shift and go to state 10
    minus           shift and go to state 2
    exclamation     shift and go to state 12
    tilde           shift and go to state 36
    Char            shift and go to state 24
    Short           shift and go to state 28
    Long            shift and go to state 25
    Signed          shift and go to state 14
    Unsigned        shift and go to state 42
    Float           shift and go to state 4
    Double          shift and go to state 26
    integer_constant shift and go to state 29
    character_constant shift and go to state 41
    floating_constant shift and go to state 40
    string_literal  shift and go to state 32
    identifier      shift and go to state 35

    DECLARATION                    shift and go to state 20
    GLOBAL_STATEMENT               shift and go to state 21
    DECL_SPECIFIERS                shift and go to state 22
    PROGRAM                        shift and go to state 23
    MAIN                           shift and go to state 17
    CONDITIONAL_EXPRESSION         shift and go to state 46
    GLOBAL_STATEMENT_LIST          shift and go to state 30
    EXPRESSION                     shift and go to state 31
    LOGICAL_OR_EXPRESSION          shift and go to state 5
    NAME                           shift and go to state 33
    EXPRESSION_STATEMENT           shift and go to state 34
    EQUALITY_EXPRESSION            shift and go to state 44
    DECLARATION_STATEMENT          shift and go to state 7
    LOGICAL_AND_EXPRESSION         shift and go to state 15
    RELATIONAL_EXPRESSION          shift and go to state 8
    MULTIPLICATIVE_EXPRESSION      shift and go to state 37
    SIMPLE_TYPE_NAME               shift and go to state 38
    AND_EXPRESSION                 shift and go to state 27
    ADDITIVE_EXPRESSION            shift and go to state 45
    PRIMARY_EXPRESSION             shift and go to state 9
    SHIFT_EXPRESSION               shift and go to state 1
    INCLUSIVE_OR_EXPRESSION        shift and go to state 43
    LITERAL                        shift and go to state 16
    UNARY_OPERATOR                 shift and go to state 47
    EXCLUSIVE_OR_EXPRESSION        shift and go to state 48
    ASSIGNMENT_EXPRESSION          shift and go to state 49
    UNARY_EXPRESSION               shift and go to state 18
    TYPE_SPECIFIER                 shift and go to state 19

state 1

    (65) RELATIONAL_EXPRESSION -> SHIFT_EXPRESSION .

    lt              reduce using rule 65 (RELATIONAL_EXPRESSION -> SHIFT_EXPRESSION .)
    gt              reduce using rule 65 (RELATIONAL_EXPRESSION -> SHIFT_EXPRESSION .)
    lte             reduce using rule 65 (RELATIONAL_EXPRESSION -> SHIFT_EXPRESSION .)
    gte             reduce using rule 65 (RELATIONAL_EXPRESSION -> SHIFT_EXPRESSION .)
    equal_equal     reduce using rule 65 (RELATIONAL_EXPRESSION -> SHIFT_EXPRESSION .)
    notequal        reduce using rule 65 (RELATIONAL_EXPRESSION -> SHIFT_EXPRESSION .)
    ampersand       reduce using rule 65 (RELATIONAL_EXPRESSION -> SHIFT_EXPRESSION .)
    cap             reduce using rule 65 (RELATIONAL_EXPRESSION -> SHIFT_EXPRESSION .)
    pipe            reduce using rule 65 (RELATIONAL_EXPRESSION -> SHIFT_EXPRESSION .)
    ampersand_ampersand reduce using rule 65 (RELATIONAL_EXPRESSION -> SHIFT_EXPRESSION .)
    pipe_pipe       reduce using rule 65 (RELATIONAL_EXPRESSION -> SHIFT_EXPRESSION .)
    semicolon       reduce using rule 65 (RELATIONAL_EXPRESSION -> SHIFT_EXPRESSION .)
    r_paren         reduce using rule 65 (RELATIONAL_EXPRESSION -> SHIFT_EXPRESSION .)
    comma           reduce using rule 65 (RELATIONAL_EXPRESSION -> SHIFT_EXPRESSION .)
    left_shift      reduce using rule 65 (RELATIONAL_EXPRESSION -> SHIFT_EXPRESSION .)
    r_bracket       reduce using rule 65 (RELATIONAL_EXPRESSION -> SHIFT_EXPRESSION .)


state 2

    (85) UNARY_OPERATOR -> minus .

    plus_plus       reduce using rule 85 (UNARY_OPERATOR -> minus .)
    minus_minus     reduce using rule 85 (UNARY_OPERATOR -> minus .)
    l_paren         reduce using rule 85 (UNARY_OPERATOR -> minus .)
    star            reduce using rule 85 (UNARY_OPERATOR -> minus .)
    ampersand       reduce using rule 85 (UNARY_OPERATOR -> minus .)
    plus            reduce using rule 85 (UNARY_OPERATOR -> minus .)
    minus           reduce using rule 85 (UNARY_OPERATOR -> minus .)
    exclamation     reduce using rule 85 (UNARY_OPERATOR -> minus .)
    tilde           reduce using rule 85 (UNARY_OPERATOR -> minus .)
    integer_constant reduce using rule 85 (UNARY_OPERATOR -> minus .)
    character_constant reduce using rule 85 (UNARY_OPERATOR -> minus .)
    floating_constant reduce using rule 85 (UNARY_OPERATOR -> minus .)
    string_literal  reduce using rule 85 (UNARY_OPERATOR -> minus .)
    identifier      reduce using rule 85 (UNARY_OPERATOR -> minus .)


state 3

    (82) UNARY_OPERATOR -> star .

    plus_plus       reduce using rule 82 (UNARY_OPERATOR -> star .)
    minus_minus     reduce using rule 82 (UNARY_OPERATOR -> star .)
    l_paren         reduce using rule 82 (UNARY_OPERATOR -> star .)
    star            reduce using rule 82 (UNARY_OPERATOR -> star .)
    ampersand       reduce using rule 82 (UNARY_OPERATOR -> star .)
    plus            reduce using rule 82 (UNARY_OPERATOR -> star .)
    minus           reduce using rule 82 (UNARY_OPERATOR -> star .)
    exclamation     reduce using rule 82 (UNARY_OPERATOR -> star .)
    tilde           reduce using rule 82 (UNARY_OPERATOR -> star .)
    integer_constant reduce using rule 82 (UNARY_OPERATOR -> star .)
    character_constant reduce using rule 82 (UNARY_OPERATOR -> star .)
    floating_constant reduce using rule 82 (UNARY_OPERATOR -> star .)
    string_literal  reduce using rule 82 (UNARY_OPERATOR -> star .)
    identifier      reduce using rule 82 (UNARY_OPERATOR -> star .)


state 4

    (113) SIMPLE_TYPE_NAME -> Float .

    Char            reduce using rule 113 (SIMPLE_TYPE_NAME -> Float .)
    Short           reduce using rule 113 (SIMPLE_TYPE_NAME -> Float .)
    Int             reduce using rule 113 (SIMPLE_TYPE_NAME -> Float .)
    Long            reduce using rule 113 (SIMPLE_TYPE_NAME -> Float .)
    Signed          reduce using rule 113 (SIMPLE_TYPE_NAME -> Float .)
    Unsigned        reduce using rule 113 (SIMPLE_TYPE_NAME -> Float .)
    Float           reduce using rule 113 (SIMPLE_TYPE_NAME -> Float .)
    Double          reduce using rule 113 (SIMPLE_TYPE_NAME -> Float .)
    identifier      reduce using rule 113 (SIMPLE_TYPE_NAME -> Float .)
    l_paren         reduce using rule 113 (SIMPLE_TYPE_NAME -> Float .)
    tilde           reduce using rule 113 (SIMPLE_TYPE_NAME -> Float .)


state 5

    (51) CONDITIONAL_EXPRESSION -> LOGICAL_OR_EXPRESSION .
    (53) LOGICAL_OR_EXPRESSION -> LOGICAL_OR_EXPRESSION . pipe_pipe LOGICAL_AND_EXPRESSION

    r_paren         reduce using rule 51 (CONDITIONAL_EXPRESSION -> LOGICAL_OR_EXPRESSION .)
    comma           reduce using rule 51 (CONDITIONAL_EXPRESSION -> LOGICAL_OR_EXPRESSION .)
    semicolon       reduce using rule 51 (CONDITIONAL_EXPRESSION -> LOGICAL_OR_EXPRESSION .)
    r_bracket       reduce using rule 51 (CONDITIONAL_EXPRESSION -> LOGICAL_OR_EXPRESSION .)
    left_shift      reduce using rule 51 (CONDITIONAL_EXPRESSION -> LOGICAL_OR_EXPRESSION .)
    pipe_pipe       shift and go to state 52


state 6
